--- a/views/markAttendance.html
+++ b/views/markAttendance.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Mark Attendance</title>
   <link rel="stylesheet" href="/style.css" />
 
 </head>
 <body>
+  <center>
   <h2>Mark Attendance</h2>
   <form action="/attendance/mark" method="POST">
     <label>Student Name:</label>
@@ -20,6 +22,7 @@
     <button type="submit">Mark Attendance</button>
   </form>
   <br/>
-  <a href="/dashboard">Back to Dashboard</a>
+  <a href="/dashboard"><strong>Back to Dashboard</strong></a>
+  </center>
 </body>
 </html>
