--- a/views/login.html
+++ b/views/login.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login</title>
+  <meta charset="UTF-8" />
+  <title>Login | Attendance System</title>
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-  <h2>Login</h2>
 
-  <form action="/login" method="POST">
-    <label>Username:</label><br />
-    <input type="text" name="username" required /><br /><br />
+  <div class="login-wrapper">
+    <div class="login-card">
+      <h2 style="color: #ffffff;">Welcome Back</h2>
+      <p class="subtitle">Login to continue</p>
 
-    <label>Password:</label><br />
-    <input type="password" name="password" required /><br /><br />
+      <form action="/login" method="POST">
 
-    <button type="submit">Login</button>
-  </form>
+        <div class="field">
+          <input type="text" name="username" required />
+          <label>Username</label>
+        </div>
+
+        <div class="field">
+          <input type="password" name="password" required />
+          <label>Password</label>
+        </div>
+
+        <button type="submit" class="btn">Login</button>
+
+      </form>
+    </div>
+  </div>
+
 </body>
 </html>
